# unity-medical-college

./: .gitignore  DEMO_WALKTHROUGH.md  README.md  pyproject.toml
unity_medical_college/: hooks.py  medical_demo_data.py  modules.txt
unity_medical_college/public/js/: medical_chart_utils.js  medical_dashboard_utils.js
unity_medical_college/unity_medical_college/dashboard_api/: clinical_api.py  nmc_api.py
unity_medical_college/unity_medical_college/dashboard_api/tests/: test_medical_api.py
unity_medical_college/unity_medical_college/doctype/curriculum_map/: curriculum_map.json  curriculum_map.py
unity_medical_college/unity_medical_college/doctype/mbbs_case_log/: mbbs_case_log.json  mbbs_case_log.py  test_mbbs_case_log.py
unity_medical_college/unity_medical_college/doctype/mbbs_clinical_posting/: mbbs_clinical_posting.json  mbbs_clinical_posting.py  test_mbbs_clinical_posting.py
unity_medical_college/unity_medical_college/doctype/mbbs_exam_component/: mbbs_exam_component.json  mbbs_exam_component.py  test_mbbs_exam_component.py
unity_medical_college/unity_medical_college/doctype/mbbs_osce_assessment/: mbbs_osce_assessment.json  mbbs_osce_assessment.py  test_mbbs_osce_assessment.py
unity_medical_college/unity_medical_college/doctype/mbbs_osce_station_score/: mbbs_osce_station_score.json  mbbs_osce_station_score.py
unity_medical_college/unity_medical_college/doctype/medical_college_settings/: medical_college_settings.json  medical_college_settings.py
unity_medical_college/unity_medical_college/doctype/nmc_faculty_compliance/: nmc_faculty_compliance.json  (+2 more)
(+6 files in other folders)
